# ATRIUM_summarization

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  run_summary_deepseek_v3.py
atrium_summarize/: summarize_interviews.py  summarize_interviews_depricated.py
atrium_summarize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
atrium_summarize/output/: dutch_text.summary.txt  english_text.summary.txt  german_text.summary.txt  spanish_text.summary.txt
generate_summary/: sample_interview.summary.txt
inputs/: sample_interview.txt
