[build-system]
requires = ["setuptools >= 62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "atrium-summarize"
description = "This project summarizes long interview transcripts using the DeepSeek LLaMA model "
version = "0.2"
dynamic = ["dependencies"]
authors = [
    {name = "Aditya Parikh", email = "aditya.parikh@ru.nl"}
]
maintainers = [
    {name = "Aditya Parikh", email = "aditya.parikh@ru.nl"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
license = "GPL-3.0-or-later"
requires-python = ">= 3.9"

[project.urls]
Repository = "https://github.com/Aditya3107/ATRIUM_summarization.git"

[project.scripts]
summarize-interviews = "atrium_summarize.summarize_interviews:main"

[tool.setuptools]
packages = [ "atrium_summarize" ]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
